<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginFragment"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="450dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="448dp"
                android:layout_height="443dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_auth_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.05"
                android:shadowColor="#80000000"
                android:shadowDx="0"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/nameApp"
                android:textColor="#FFFFFF"
                android:textSize="52sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageView2"
                app:layout_constraintEnd_toEndOf="@id/imageView2"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="@id/imageView2"
                app:layout_constraintTop_toTopOf="@id/imageView2"
                app:layout_constraintVertical_bias="0.403" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                app:boxStrokeColor="@color/pastel"
                app:hintTextColor="@color/pastel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                app:boxStrokeColor="@color/pastel"
                app:hintTextColor="@color/pastel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLog"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/black"
                android:text="@string/next"
                android:textSize="17sp"
                app:cornerRadius="8dp"
                tools:ignore="VisualLintButtonSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="TextSizeCheck">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/or"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRe"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/gray_white"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                tools:ignore="VisualLintButtonSize,VisualLintBounds" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="36dp"
                android:gravity="center"
                android:text="@string/terms_text"
                android:textSize="15sp"
                tools:ignore="VisualLintBounds" />

        </LinearLayout>

    </LinearLayout>

