<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chatbot.ChatBotFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:alpha="1"
            android:background="#4A90E2"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/back_icon"
                android:contentDescription="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="413dp"
                android:layout_height="72dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/bot_ai"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/btnBack"
                app:layout_constraintTop_toTopOf="parent"
                tools:gravity="center"
                tools:ignore="VisualLintBounds" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="8dp">

            <EditText
                android:id="@+id/edtMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_chatbot"
                android:hint="@string/input_question"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:gravity="top"
                android:importantForAutofill="no"
                android:padding="12dp"
                tools:ignore="VisualLintTextFieldSize" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_btn_save"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:cornerRadius="18dp"
                app:elevation="4dp" />
        </LinearLayout>

</LinearLayout>
