<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="296dp"
                android:layout_height="match_parent"
                android:text="@string/name_item_remind"
                android:textColor="#153E8A"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_status_chip"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/due"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="#666666"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overdue"
            android:textColor="#1E5BB8"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Actions -->
        <!-- Actions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnPaid"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/check_icon"
                app:tint="#2E7D32"
                tools:ignore="SpeakableTextPresentCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/edit_icon"
                app:tint="@color/finance_blue_500"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/del_icon"
                app:tint="#E53935"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
