<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imgCate"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            tools:ignore="ContentDescription" />


        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvNameC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/name_cate"
                android:textColor="#1E3A5F"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNote"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="7dp"
                android:gravity="center|start"
                android:text="@string/note"
                android:textColor="#8A8A8A"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/dateH"
                android:textColor="#8A8A8A"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="#E53935"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnEdit"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/edit_icon"
                    app:tint="@color/finance_blue_500" />

                <ImageView
                    android:id="@+id/btnDel"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/del_icon"
                    app:tint="#E53935"
                    tools:ignore="VisualLintBounds" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
